# rusted-ants

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ant.rs  main.rs
src/solver/: ant.rs  colony.rs  mod.rs
src/utils/: loader.rs  mod.rs  sparse_matrix.rs
