[package]
name = "rusted-ants"
version = "0.1.0"
authors = ["KatoMono Enkeli <k4t0mono@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsplib = "0.1.0"
toml = "0.5"
clap = "2.33"
simplelog = "0.6"
log = "0.4"